conv-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv-api-backend
  template:
    metadata:
      labels:
        components: conv-api-backend
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "500Mi"
            cpu: "300m"
        volumeMounts:
        - name: conv-api-db
          mountPath: /opt/app/uploads
      volumes:
        - name: conv-api-db
          persistentVolumeClaim:
            claimName: conv-api-pvc
