conv-service-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv-service-backend
  template:
    metadata:
      labels:
        components: conv-service-backend
    spec:
      containers:
      - name: conv-service
        image: antonlarichev/conv-service:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "500Mi"
            cpu: "300m"
