conv-api-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: conv-api-backend
