conv-service-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    components: conv-service-backend
  ports:
  - port: 80
    protocol: TCP
