ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conv-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: conv.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: conv-app-cluster-ip
            port: 
              number: 80
